--- a/samples/Blazor/Pages/Wikipedia.razor
+++ b/samples/Blazor/Pages/Wikipedia.razor
@@ -14,13 +14,15 @@
     <div class="d-flex flex-row">
         <input type="text" @bind="SearchText" />
         <button disabled=@indexing class="btn btn-primary ml-2" @onclick="Search">Search</button>
+        <button disabled=@indexing class="btn btn-secondary ml-2" @onclick="ShowAll">Show all</button>
+        <a href="https://github.com/mikegoatly/lifti/wiki/The-LIFTI-query-language" class="align-self-center ml-2" target="_blank">Query language examples</a>
     </div>
 
     @if (results != null)
     {
         <div class="container-fluid">
             <div class="row">
-                <ul class="col-4 search-results">
+                <ul class="col-3 search-results pr-2 border-primary border-right">
                     @foreach (var result in results)
                     {
                         <li class="p-1" @onclick="() => this.ShowItem(result)">@result.Item</li>
@@ -28,7 +30,7 @@
                 </ul>
                 @if (this.selectedContent != null)
                 {
-                    <div class="col-8">
+                    <div class="col-9 pl-4">
                         @((MarkupString)this.selectedContent)
                     </div>
                 }
@@ -139,5 +141,10 @@
     void Search()
     {
         results = this.index.Search(this.SearchText).ToList();
+    }
+
+    void ShowAll()
+    {
+        results = this.loadedPages.Keys.Select(k => new SearchResult<string>(k, Array.Empty<FieldSearchResult>())).ToList();
     }
 }
