--- a/samples/Blazor/Shared/MainLayout.razor
+++ b/samples/Blazor/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <a href="https://github.com/mikegoatly/lifti" target="_blank" class="ml-md-auto">LIFTI on GitHub</a>
     </div>
 
     <div class="content px-4">
