--- a/samples/Blazor/Pages/Wikipedia.razor
+++ b/samples/Blazor/Pages/Wikipedia.razor
@@ -11,30 +11,57 @@
         <button disabled=@indexing class="btn btn-secondary" @onclick="IndexRandomPagesAsync">Index more...</button>
     </div>
 
-    <div class="d-flex flex-row">
+    <div class="d-flex flex-row mb-2">
         <input type="text" @bind="SearchText" />
         <button disabled=@indexing class="btn btn-primary ml-2" @onclick="Search">Search</button>
         <button disabled=@indexing class="btn btn-secondary ml-2" @onclick="ShowAll">Show all</button>
         <a href="https://github.com/mikegoatly/lifti/wiki/The-LIFTI-query-language" class="align-self-center ml-2" target="_blank">Query language examples</a>
     </div>
 
-    @if (results != null)
+    @if (this.SyntaxError != null)
     {
-        <div class="container-fluid">
-            <div class="row">
-                <ul class="col-3 search-results pr-2 border-primary border-right">
-                    @foreach (var result in results)
-                    {
-                        <li class="p-1" @onclick="() => this.ShowItem(result)">@result.Item</li>
-                    }
-                </ul>
-                @if (this.selectedContent != null)
-                {
-                    <div class="col-9 pl-4">
-                        @((MarkupString)this.selectedContent)
-                    </div>
-                }
+        <div class="alert alert-danger d-flex">
+            <span class="align-self-center">@this.SyntaxError</span>
+        </div>
+    }
+    else if (results != null)
+    {
+        if (results.Count == 0)
+        {
+            <div class="alert alert-info d-flex">
+                <span class="align-self-center">No matches!</span>
             </div>
+        }
+        else
+        {
+            <div class="container-fluid border-primary border-top">
+                <div class="row">
+                    <ul class="col-3 search-results pr-2 pt-2 border-primary border-right">
+                        @foreach (var result in results)
+                        {
+                            <li class="p-1" @onclick="() => this.ShowItem(result)">@result.Item</li>
+                        }
+                    </ul>
+                    @if (this.selectedContent != null)
+                    {
+                        <div class="col-9 pl-4 pt-2">
+                            @((MarkupString)this.selectedContent)
+                        </div>
+                    }
+                </div>
+            </div>
+        }
+    }
+    else
+    {
+        <div class="text-muted">
+            <div class="mb-4">Why not try these searches?:</div>
+            <dl>
+                <dt>"Buffy the vampire slayer"</dt>
+                <dd>All these words in this order</dd>
+                <dt>critical ~> acclaim</dt>
+                <dd>The word "critical" when it appears before and near to the wrod "acclaim"</dd>
+            </dl>
         </div>
     }
 </div>
@@ -54,13 +81,14 @@
         new PageSummary { Slug = "Fantastic_Mr_Fox" }
     };
 
-    IEnumerable<SearchResult<string>> results = null;
+    IList<SearchResult<string>> results = null;
     FullTextIndex<string> index = new FullTextIndex<string>();
 
     private bool errored;
     private bool indexing;
     private string selectedContent;
 
+    private string SyntaxError { get; set; }
     private string Message { get; set; }
     private string SearchText { get; set; }
     private Dictionary<string, string> loadedPages = new Dictionary<string, string>();
@@ -140,7 +168,15 @@
 
     void Search()
     {
-        results = this.index.Search(this.SearchText).ToList();
+        try
+        {
+            this.SyntaxError = null;
+            results = this.index.Search(this.SearchText).ToList();
+        }
+        catch (Exception ex)
+        {
+            this.SyntaxError = ex.Message;
+        }
     }
 
     void ShowAll()
