Added accent insensitive search example

--- a/samples/Blazor/Pages/Wikipedia.razor
+++ b/samples/Blazor/Pages/Wikipedia.razor
@@ -82,6 +82,8 @@
                 <dd>The document must contain words starting with "st" and "sp"</dd>
                 <dt>fight | thrones</dt>
                 <dd>Documents containing words deriving from "fight" or "thrones" (Word stemming is enabled)</dd>
+                <dt>"san ti"</dt>
+                <dd>Returns pages containing "Sān tǐ", demonstrating accent insensitivity searching.</dd>
             </dl>
         </div>
     }
