Expose public facing methods in IIdLookup, leaving everything else in an internal IIdPool interface

--- a/samples/Blazor/Pages/Wikipedia.razor
+++ b/samples/Blazor/Pages/Wikipedia.razor
@@ -200,7 +200,7 @@
 
     void ShowIndex()
     {
-        this.IndexText = this.index.Root.ToString();
+        this.IndexText = this.index.ToString();
     }
 
     void Clear()
