--- a/samples/Blazor/Pages/Wikipedia.razor
+++ b/samples/Blazor/Pages/Wikipedia.razor
@@ -77,7 +77,7 @@
                 <dt>"Buffy the vampire slayer"</dt>
                 <dd>All these words in this order</dd>
                 <dt>critical ~> acclaim</dt>
-                <dd>The word "critical" when it appears before and near to the wrod "acclaim"</dd>
+                <dd>The word "critical" when it appears before and near to the word "acclaim"</dd>
                 <dt>st* & sp*</dt>
                 <dd>The document must contain words starting with "st" and "sp"</dd>
                 <dt>fight | thrones</dt>
