--- a/samples/Blazor/Shared/NavMenu.razor
+++ b/samples/Blazor/Shared/NavMenu.razor
@@ -8,13 +8,11 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="https://mikegoatly.github.io/lifti/docs/">
+                <span class="oi oi-document" aria-hidden="true"></span> Documentation
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="wikipedia-search">
-                <span class="oi magnifying-glass" aria-hidden="true"></span> Wikipedia searching
+            <NavLink class="nav-link" href="/">
+                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Wikipedia searching
             </NavLink>
         </li>
     </ul>
