Update blazor demo

--- a/samples/Blazor/_Imports.razor
+++ b/samples/Blazor/_Imports.razor
@@ -1,7 +1,13 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorApp
 @using BlazorApp.Shared
+@using BlazorApp.Services
+@using Lifti
+@using Lifti.Tokenization.TextExtraction
