--- a/samples/Blazor/Pages/Index.razor
+++ b/samples/Blazor/Pages/Index.razor
@@ -1,31 +1,57 @@
 ﻿@page "/"
-@using Lifti
-@using Lifti.Tokenization.TextExtraction
-@inject HttpClient Http
+@inject WikipediaIndexService IndexService
+@inject WikipediaPageProvider WikipediaPageProvider
 
 <p>This example fetches random Wikipedia page content and indexes the text in it. You can try out various LIFTI searches to find content in them.</p>
 
-<div class="position-relative">
-    <div class="alert alert-@(this.errored ? "danger" : "secondary") d-flex">
-        <span class="align-self-center">@Message</span>
-        <span class="align-self-center text-right flex-fill mr-2">@index.Count pages indexed.</span>
-        <button disabled=@indexing class="btn btn-secondary" @onclick="IndexRandomPagesAsync">Index more...</button>
+<div class="d-flex flex-column">
+
+    <div class="d-flex flex-row mb-2 align-items-center">
+        <EditForm class="me-2 d-flex flex-row" Model=@this>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="stemmingEnabled" @bind=@StemmingEnabled>
+                <label class="form-check-label" for="stemmingEnabled">Use word stemming when indexing</label>
+            </div>
+
+            <div class="form-check form-switch ms-2">
+                <input class="form-check-input" type="checkbox" id="fuzzyMatch" @bind=@FuzzyMatchByDefault>
+                <label class="form-check-label" for="fuzzyMatch">Fuzzy match by default</label>
+            </div>
+        </EditForm>
+
+        <div class=@(IndexRebuildRequired ? "" : "invisible")>
+            <button class="btn btn-warning"
+                    @onclick=@(async () => await RebuildIndex())>
+                Rebuild index
+            </button>
+        </div>
     </div>
 
-    <div class="d-flex flex-row mb-2">
-        <input type="text" @bind="SearchText" />
-        <button class="btn btn-primary ml-2" @onclick="Search">Search</button>
-        <button class="btn btn-secondary ml-2" @onclick="ShowAll">Show all</button>
-        <button class="btn btn-secondary ml-2" @onclick="Clear">Clear results</button>
-        <button class="btn btn-secondary ml-2" @onclick="ShowIndex">Show me the index</button>
-        <a href="https://mikegoatly.github.io/lifti/docs/searching/" class="align-self-center ml-2" target="_blank">Query language examples</a>
+    <div class="alert alert-@(this.errored ? "danger" : "secondary") d-flex justify-content-around">
+        <span class="align-self-center">@Message</span>
+
+        <div class="flex-fill d-flex align-items-center">
+            <span class="me-2 flex-fill text-end">@IndexService.IndexCount pages indexed.</span>
+            <button disabled=@indexing class="btn btn-secondary" @onclick="IndexRandomPagesAsync">Index more...</button>
+        </div>
+    </div>
+
+    <div class="d-flex flex-row mb-2 justify-content-between">
+        <form @onsubmit=@((e) => Task.FromResult(false)) class="flex-fill d-flex">
+            <input type="text" @bind="SearchText" class="flex-fill" />
+            <button type="submit" class="btn btn-primary ms-2" @onclick="Search">Search</button>
+            <a href="https://mikegoatly.github.io/lifti/docs/searching/" class="align-self-center ms-2" target="_blank">Query language syntax</a>
+        </form>
+        <div>
+            <button class="btn btn-secondary ms-2" @onclick="ShowAll">Show all</button>
+            <button class="btn btn-secondary ms-2" @onclick="Clear">Clear results</button>
+            <button class="btn btn-secondary ms-2" @onclick="ShowIndex">Show me the index</button>
+        </div>
     </div>
 
     @if (this.IndexText != null)
     {
-        <pre>
-            @this.IndexText
-        </pre>
+        <pre>@this.IndexText</pre>
     }
     else if (this.SyntaxError != null)
     {
@@ -43,27 +69,31 @@
         }
         else
         {
-            <div class="container-fluid border-primary border-top">
+            <div class="container-fluid border-primary border-top flex-fill overflow-auto">
                 <div class="row">
-                    <ul class="col-3 search-results pr-2 pt-2 border-primary border-right">
+                    <ul class="col-3 search-results pe-2 pt-2 border-primary border-right">
                         @foreach (var result in results)
                         {
-                            <li class="p-1" @onclick="() => this.ShowItem(result)">@result.Key <br/> Score @result.Score.ToString("0.####")</li>
+                            <li class="p-1" @onclick="() => this.ShowItem(result)">@result.Key <br /> Score @result.Score.ToString("0.####")</li>
                         }
                     </ul>
                     @if (this.selectedContent != null)
                     {
-                        <div class="col-9 pl-4 pt-2 d-flex flex-row">
+                        <div class="col-9 ps-4 pt-2 d-flex flex-row">
                             <div>
                                 @((MarkupString)this.selectedContent)
                             </div>
-                            <div style="max-width:140px;width:140px;min-width:140px">
-                                <strong>Word matches:</strong>
-                                @foreach (var location in this.wordLocations)
-                                {
-                                    <div>@location</div>
-                                }
-                            </div>
+                            @if (this.wordLocations != null)
+                            {
+                                <div style="max-width:150px;width:150px;min-width:150px;">
+                                    <strong>Word matches:</strong>
+                                    <em>#token [offset,length]</em>
+                                    @foreach (var location in this.wordLocations!)
+                                    {
+                                        <div>@location</div>
+                                    }
+                                </div>
+                            }
                         </div>
                     }
                 </div>
@@ -72,164 +102,8 @@
     }
     else
     {
-        <div class="text-muted">
-            <div class="mb-4">Why not try these searches?:</div>
-            <dl>
-                <dt>"Buffy the vampire slayer"</dt>
-                <dd>All these words in this order</dd>
-                <dt>critical ~> acclaim</dt>
-                <dd>The word "critical" when it appears before and near to the word "acclaim"</dd>
-                <dt>st* & sp*</dt>
-                <dd>The document must contain words starting with "st" and "sp"</dd>
-                <dt>fight | thrones</dt>
-                <dd>Documents containing words deriving from "fight" or "thrones" (Word stemming is enabled)</dd>
-                <dt>"san ti"</dt>
-                <dd>Returns pages containing "Sān tǐ", demonstrating accent insensitivity searching.</dd>
-            </dl>
-        </div>
+        <Blazor.Shared.ExampleSearches />
     }
 </div>
 
-@code {
-        PageSummary[] defaultPages = new[]
-        {
-        new PageSummary { Slug = "The_Three-Body_Problem_(novel)" },
-        new PageSummary { Slug = "Aliens_(film)" },
-        new PageSummary { Slug = "Porcupine_Tree" },
-        new PageSummary { Slug = "Buffy_the_Vampire_Slayer" },
-        new PageSummary { Slug = "Monstress_(comics)" },
-        new PageSummary { Slug = "Donnie_Darko" },
-        new PageSummary { Slug = "Zune" },
-        new PageSummary { Slug = "The_Boys_(2019_TV_series)" },
-        new PageSummary { Slug = "Game_of_Thrones" },
-        new PageSummary { Slug = "Fantastic_Mr_Fox" }
-    };
 
-        IList<SearchResult<string>> results = null;
-        IFullTextIndex<string> index = new FullTextIndexBuilder<string>()
-            .WithDefaultTokenization(o => o.WithStemming())
-            .WithObjectTokenization<WikipediaPage>(
-                page => page.WithKey(i => i.Title)
-                    .WithField(
-                        "Content", 
-                        i => i.Text.Content, 
-                        o => o.WithStemming(), 
-                        new XmlTextExtractor()))
-            .Build();
-
-    private bool errored;
-    private bool indexing;
-    private string selectedContent;
-    private IReadOnlyList<TokenLocation> wordLocations;
-
-    private string IndexText { get; set; }
-    private string SyntaxError { get; set; }
-    private string Message { get; set; }
-    private string SearchText { get; set; }
-    private Dictionary<string, string> loadedPages = new Dictionary<string, string>();
-
-    protected override async Task OnInitializedAsync()
-    {
-        await FetchPagesAsync(defaultPages);
-    }
-
-    void ShowItem(SearchResult<string> searchResult)
-    {
-        var builder = new System.Text.StringBuilder(this.loadedPages[searchResult.Key]);
-        var locations = searchResult.FieldMatches.SelectMany(m => m.Locations).ToList();
-        foreach (var location in locations.OrderByDescending(l => l.Start))
-        {
-            builder.Insert(location.Start + location.Length, "</span>");
-            builder.Insert(location.Start, "<span class='bg-warning'>");
-        }
-
-        this.wordLocations = locations;
-        this.selectedContent = builder.ToString();
-    }
-
-    async Task IndexRandomPagesAsync()
-    {
-        this.errored = false;
-
-        this.Message = "Getting 10 random Wikipedia pages...";
-
-        try
-        {
-            var randomList = await Http.GetJsonAsync<RandomResult>("https://en.wikipedia.org/w/api.php?action=query&list=random&rnlimit=10&rnnamespace=0&format=json&&origin=*");
-
-            await this.FetchPagesAsync(randomList.Query.random);
-        }
-        catch (Exception ex)
-        {
-            this.Message = ex.Message;
-            this.errored = true;
-        }
-    }
-
-    async Task FetchPagesAsync(IEnumerable<PageSummary> pages)
-    {
-        this.indexing = true;
-        this.errored = false;
-
-        try
-        {
-            var i = 1;
-            foreach (var result in pages)
-            {
-                var counter = $"[{i++}/10]";
-                this.Message = $"{counter} Fetching page {result.Title ?? result.Slug}";
-                base.StateHasChanged();
-
-                var filter = result.Slug != null ? "page=" + result.Slug : "pageid=" + result.Id;
-                var results = await Http.GetJsonAsync<WikipediaResult>($"https://en.wikipedia.org/w/api.php?action=parse&section=0&prop=text&{filter}&format=json&&origin=*");
-
-                this.Message = $"{counter} Indexing...";
-                base.StateHasChanged();
-                loadedPages[results.Page.Title] = results.Page.Text.Content;
-                await this.index.AddAsync(results.Page);
-            }
-
-            this.Message = "Ready";
-        }
-        catch (Exception ex)
-        {
-            this.Message = ex.Message;
-            this.errored = true;
-        }
-        finally
-        {
-            this.indexing = false;
-        }
-    }
-
-    void ShowIndex()
-    {
-        this.IndexText = this.index.ToString();
-    }
-
-    void Clear()
-    {
-        this.IndexText = null;
-        this.results = null;
-    }
-
-    void Search()
-    {
-        try
-        {
-            this.IndexText = null;
-            this.SyntaxError = null;
-            results = this.index.Search(this.SearchText).ToList();
-        }
-        catch (Exception ex)
-        {
-            this.SyntaxError = ex.Message;
-        }
-    }
-
-    void ShowAll()
-    {
-        this.IndexText = null;  
-        results = this.loadedPages.Keys.Select(k => new SearchResult<string>(k, Array.Empty<FieldSearchResult>())).ToList();
-    }
-}
