--- a/samples/Blazor/Shared/MainLayout.razor
+++ b/samples/Blazor/Shared/MainLayout.razor
@@ -1,15 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
-    <NavMenu />
-</div>
-
-<div class="main">
-    <div class="top-row px-4">
-        <a href="https://github.com/mikegoatly/lifti" target="_blank" class="ml-md-auto">LIFTI on GitHub</a>
+<div class="page">
+    <div class="sidebar">
+        <NavMenu />
     </div>
 
-    <div class="content px-4">
-        @Body
-    </div>
+    <main>
+        <article class="content px-4">
+            @Body
+        </article>
+    </main>
 </div>
