--- a/samples/Blazor/Shared/NavMenu.razor
+++ b/samples/Blazor/Shared/NavMenu.razor
@@ -1,30 +1,20 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">LIFTI</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+﻿<div class="top-row ps-3 navbar navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="">LIFTI Demo</a>
+    </div>
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
+<div>
+    <nav class="flex-column">
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://mikegoatly.github.io/lifti/docs/">
-                <span class="oi oi-document" aria-hidden="true"></span> Documentation
+                LIFTI Documentation
             </NavLink>
-            <NavLink class="nav-link" href="/">
-                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Wikipedia searching
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="https://github.com/mikegoatly/lifti">
+                LIFTI on GitHub
             </NavLink>
-        </li>
-    </ul>
+        </div>
+    </nav>
 </div>
-
-@code {
-    bool collapseNavMenu = true;
-
-    string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
