--- a/samples/Blazor/Pages/ResultView.razor
+++ b/samples/Blazor/Pages/ResultView.razor
@@ -3,12 +3,12 @@
 @if (this.selectedContent is not null)
 {
     <div class="col-9 ps-4 pt-2 d-flex flex-row">
-        <div>
+        <div class="result-content">
             @((MarkupString)this.selectedContent)
         </div>
         @if (this.wordLocations != null)
         {
-            <div style="max-width:150px;width:150px;min-width:150px;">
+            <div class="word-matches" >
                 <strong>Word matches:</strong>
                 <em>#token [offset,length]</em>
                 @foreach (var location in this.wordLocations!)
