--- a/samples/Blazor/Controls/TabControl.razor
+++ b/samples/Blazor/Controls/TabControl.razor
@@ -18,9 +18,9 @@
 @code {
     // Next line is needed so we are able to add <TabPage> components inside
     [Parameter]
-    public RenderFragment ChildContent { get; set; }
+    public RenderFragment ChildContent { get; set; } = null!;
 
-    public TabPage ActivePage { get; set; }
+    public TabPage ActivePage { get; set; } = null!;
     List<TabPage> Pages = new List<TabPage>();
 
     internal void AddPage(TabPage tabPage)
